// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitModal component matches the snapshot on success 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 3rem;
  background-color: #42ba96;
  color: #333;
  transition: all 0.3s ease;
  z-index: 5;
}

.c1 {
  font-size: 1.2rem;
  font-weight: bold;
  margin: 0;
  padding: 0;
}

<div
    class="c0"
  >
    <p
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`SubmitModal component matches the snapshot snapshot on error 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 3rem;
  background-color: #ff3333;
  color: #333;
  transition: all 0.3s ease;
  z-index: 5;
}

.c1 {
  font-size: 1.2rem;
  font-weight: bold;
  margin: 0;
  padding: 0;
}

<div
    class="c0"
  >
    <p
      class="c1"
    />
  </div>
</DocumentFragment>
`;
